# python-example-application

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
python_example_application/: __init__.py  python_example_application.py
python_example_application/complex_submodule/: complex_submodule1a.py
tests/: test_python_example_application.py
